--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, init
     
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style.css 2">
 
 
     <title>santa catarina mil grau</title>
